# NiflectSampleHotSwappableTensorflowMultiboxDetector

./: README.md
Project/: StorageConfig.cmake
Project/MultiboxDetector/: CMakeLists.txt  Licensed_TensorFlow.cmake
Project/Niflect/: Default.cmake
Project/Plugin/: CMakeLists.txt  Install.cmake
Project/Plugin/Detector/: Shared.cmake
Project/Runtime/: Shared.cmake
Source/MultiboxDetector/include/: Example.h
Source/MultiboxDetector/src/: AccessorSetting.h  Main.cpp  MySerialization.h
Source/Plugin/Detector/include/: Detector.h
Source/Plugin/Detector/src/: AccessorSetting.h  Detector.cpp  DetectorCommon.h  MySerialization.h
Source/Runtime/include/: AccessorSetting.h  Runtime.h  RuntimeCommon.h
Source/Runtime/include/HotSwap/: HotSwap.h  Nata.h  Plugin.h  RunTimeModule.h  RuntimeMethodHash.h  TypeSafeInvocationBestPractice.h
Source/Runtime/src/: Runtime.cpp
Source/Runtime/src/HotSwap/: HotSwap.cpp  RunTimeModule.cpp  TypeSafeInvocationBadAlternativeMethodProxy.h
